--- a/docker/Dockerfile.cuda
+++ b/docker/Dockerfile.cuda
@@ -1,10 +1,11 @@
 FROM vllm/vllm-openai:v0.9.2
+# FROM docker.m.daocloud.io/vllm/vllm-openai:v0.9.2
 
 LABEL maintainer="kai.liu <kai.liu@brgroup.com>"
 
 # add vllm kubernetes plugin support
-COPY dist/vllm_kubernetes_plugin-0.1.0.tar.gz /tmp/vllm_kubernetes_plugin-0.1.0.tar.gz
-RUN pip install /tmp/vllm_kubernetes_plugin-0.1.0.tar.gz --no-deps && rm -rf /tmp/vllm_kubernetes_plugin-0.1.0.tar.gz
+# COPY dist/vllm_kubernetes_plugin-0.1.0.tar.gz /tmp/vllm_kubernetes_plugin-0.1.0.tar.gz
+# RUN pip install /tmp/vllm_kubernetes_plugin-0.1.0.tar.gz --no-deps && rm -rf /tmp/vllm_kubernetes_plugin-0.1.0.tar.gz
 
 # add vllm tei plugin support
 COPY dist/vllm_tei_plugin-0.9.2.tar.gz /tmp/vllm_tei_plugin-0.9.2.tar.gz
