--- a/docker/Dockerfile.cuda
+++ b/docker/Dockerfile.cuda
@@ -1,4 +1,5 @@
-FROM docker.m.daocloud.io/vllm/vllm-openai:v0.10.0
+FROM vllm/vllm-openai:v0.10.0
+# FROM docker.m.daocloud.io/vllm/vllm-openai:v0.10.0
 
 # add vllm kubernetes plugin support
 # COPY dist/vllm_kubernetes_plugin-0.1.0.tar.gz /tmp/vllm_kubernetes_plugin-0.1.0.tar.gz
