--- a/docker/Dockerfile.cuda
+++ b/docker/Dockerfile.cuda
@@ -1,4 +1,4 @@
-FROM vllm/vllm-openai:v0.8.5.post1
+FROM vllm/vllm-openai:v0.9.1
 
 LABEL maintainer="kai.liu <kai.liu@brgroup.com>"
 
@@ -7,7 +7,7 @@ COPY dist/vllm_kubernetes_plugin-0.1.0.tar.gz /tmp/vllm_kubernetes_plugin-0.1.0.
 RUN pip install /tmp/vllm_kubernetes_plugin-0.1.0.tar.gz --no-deps && rm -rf /tmp/vllm_kubernetes_plugin-0.1.0.tar.gz
 
 # add vllm tei plugin support
-COPY dist/vllm_tei_plugin-0.8.5.post1.tar.gz /tmp/vllm_tei_plugin-0.8.5.post1.tar.gz
-RUN pip install /tmp/vllm_tei_plugin-0.8.5.post1.tar.gz --no-deps && rm -rf /tmp/vllm_tei_plugin-0.8.5.post1.tar.gz
+COPY dist/vllm_tei_plugin-0.9.1.tar.gz /tmp/vllm_tei_plugin-0.9.1.tar.gz
+RUN pip install /tmp/vllm_tei_plugin-0.9.1.tar.gz --no-deps && rm -rf /tmp/vllm_tei_plugin-0.9.1.tar.gz
 
 ENTRYPOINT ["python3", "-m", "vllm_tei_plugin.entrypoints.openai.api_server"]
