--- a/docker/Dockerfile.npu
+++ b/docker/Dockerfile.npu
@@ -1,7 +1,4 @@
-FROM vllm/vllm-openai:v0.9.2
-# FROM docker.m.daocloud.io/vllm/vllm-openai:v0.9.2
-
-LABEL maintainer="kai.liu <kai.liu@brgroup.com>"
+FROM m.daocloud.io/quay.io/ascend/vllm-ascend:v0.9.2rc1
 
 # add vllm kubernetes plugin support
 # COPY dist/vllm_kubernetes_plugin-0.1.0.tar.gz /tmp/vllm_kubernetes_plugin-0.1.0.tar.gz
